tests/baselines/reference/es6ImportDefaultBindingFollowedWithNamespaceBindingDts1.errors.txt
tests/cases/compiler/client.ts(2,12): error TS4025: Exported variable 'x' has or is using private name 'defaultBinding'.


==== tests/cases/compiler/server.ts (0 errors) ====
    
    class a { }
    export = a;
    
==== tests/cases/compiler/client.ts (1 errors) ====
    import defaultBinding, * as nameSpaceBinding from "server";
    export var x = new defaultBinding();
               ~
!!! error TS4025: Exported variable 'x' has or is using private name 'defaultBinding'.